2020-01-31  Jonathan Bedard  <jbedard@apple.com>

        results.webkit.org: Handle modified firewall rules
        https://bugs.webkit.org/show_bug.cgi?id=207047

        Reviewed by Aakash Jain.

        * Scripts/webkitpy/results/upload.py:
        (Upload.upload_archive): Return true for 403 and 413 errors, but print a message
        indicating the upload failed.
        * Scripts/webkitpy/results/upload_unittest.py:
        (UploadTest.test_archive_upload):

2020-01-30  Jiewen Tan  <jiewen_tan@apple.com>

        Unreviewed, another speculative test fix after r255041

        * WebKitTestRunner/cocoa/TestControllerCocoa.mm:
        (WTR::TestController::addTestKeyToKeychain):
        Adds kSecAttrAccessible: kSecAttrAccessibleAfterFirstUnlock to secItem to bypass
        potential error due to screen locks.

2020-01-30  Alex Christensen  <achristensen@webkit.org>

        Add WKNavigationDelegate SPI to disable TLS 1.0 and 1.1
        https://bugs.webkit.org/show_bug.cgi?id=206979

        Reviewed by Brady Eidson.

        * MiniBrowser/mac/SettingsController.m:
        * TestWebKitAPI/Tests/WebKitCocoa/TLSDeprecation.mm:
        (-[TLSNavigationDelegate waitForDidFinishNavigation]):
        (-[TLSNavigationDelegate waitForDidFailProvisionalNavigation]):
        (-[TLSNavigationDelegate receivedShouldAllowLegacyTLS]):
        (-[TLSNavigationDelegate webView:didReceiveAuthenticationChallenge:completionHandler:]):
        (-[TLSNavigationDelegate webView:didFinishNavigation:]):
        (-[TLSNavigationDelegate webView:didFailProvisionalNavigation:withError:]):
        (-[TLSNavigationDelegate _webView:authenticationChallenge:shouldAllowLegacyTLS:]):
        (TestWebKitAPI::TEST):

2020-01-30  Jonathan Bedard  <jbedard@apple.com>

        PAL: Remove old iOS version macros
        https://bugs.webkit.org/show_bug.cgi?id=206905

        Reviewed by Darin Adler.
